--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # This file lists all individuals having contributed content to the repository
 
 yano yvonne <yanoevon@gmail.com>
-Ezer owoeye 
+Ezer owoeye <ezerowe@gmail.com>
